# authforge-rust

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  test_vectors.json
.github/workflows/: ci.yml  release.yml
examples/: basic.rs
src/: lib.rs
tests/: vectors.rs
