[package]
name = "authforge"
version = "0.1.0"
edition = "2021"
description = "AuthForge SDK — license validation, HWID binding, and heartbeat verification"
license = "MIT"

[dependencies]
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
mac_address = "1"
hostname = "0.4"
