[package]
name = "authforge"
version = "2.0.0"
edition = "2021"
description = "AuthForge SDK — license validation, HWID binding, and heartbeat verification"
license = "MIT"

[dependencies]
sha2 = "0.10"
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
mac_address = "1"
hostname = "0.4"
