[package]
name = "authforge"
version = "1.0.0"
edition = "2021"
description = "AuthForge SDK — license validation, HWID binding, and heartbeat verification"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AuthForgeCC/authforge-rust"
homepage = "https://authforge.cc"
documentation = "https://docs.rs/authforge"
keywords = ["authforge", "license", "licensing", "authentication", "hwid"]
categories = ["authentication", "api-bindings"]

[dependencies]
sha2 = "0.10"
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
mac_address = "1"
hostname = "0.4"
